--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ a {
 
 a:hover {
   opacity: 1;
+  transition: ease, 1s;
 }
 
 .container {
@@ -74,5 +75,25 @@ a:hover {
   background: white;
   padding: 30px;
   border: 1px lightgrey;
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.1)
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  border-radius: 5px;
+}
+
+.btn-lien {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid black;
+  opacity: 0.8;
+  background-color:#3D2B27;
+  color: white;
+}
+
+.btn-lien:hover {
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid black;
+  opacity: 1;
+  transform:; scale (2);
+  transition: ease, 1s;
+  background-color:#3D2B27;
 }
