--- a/style.css
+++ b/style.css
@@ -57,6 +57,12 @@ a:hover {
 .list-inline {
   list-style: none;
   padding-left: 0px;
+  transition: ease, 0.8s
+}
+
+.list-inline:hover {
+  transform: scale(1.6);
+  transition: ease, 0.8s
 }
 
 .list-inline > li {
@@ -89,12 +95,12 @@ a:hover {
 }
 
 .card-white:hover {
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.3);
+  box-shadow: 0px 10px 30px rgba(70,10,0,0.3);
   transition: ease, 1s;
 }
 
 .btn-lien {
-  padding: 7px;
+  padding: 8px;
   border-radius: 8px;
   opacity: 0.8;
   background-color:#3D2B27;
@@ -109,5 +115,4 @@ a:hover {
   transform: scale(1.4);
   transition: ease, 1s;
   background-color:#3D2B27;
-  transform: translateY(200%);
 }
