--- a/style.css
+++ b/style.css
@@ -95,8 +95,7 @@ a:hover {
 }
 
 .card-white:hover {
-  box-shadow: 0px 10px 30px rgba(70,10,0,0.3);
-  transition: ease, 1s;
+  box-shadow: 0px 10px 30px rgba(80,0,0,0.3)
 }
 
 .btn-lien {
