--- a/style.css
+++ b/style.css
@@ -1,57 +1,32 @@
+@import url(components/keyframes.css);
+@import url(components/container.css);
+@import url(components/social.css);
+@import url(components/button.css);
+@import url(components/card.css);
+@import url(components/image.css);
+
 body  {
-  background-color: #F8F8F8;
-  color: #333;
+  background-color: #1c1818;
+  color: white;
   font-family:'Ubuntu', sans-serif;
-  font-size: 20px;
+  font-size: 1.5em;
   line-height: 1.3em;
 }
 
 h1  {
-  color: #333;
-  color:#3D2B27;
-  font-size: 1.7em;
+  color :yellow;
+  font-size: 1.5em;
   font-family:'Montserrat', sans-serif;
+  text-transform: uppercase;
+  line-height: 45px;
+  opacity: 0;
+  animation: 3s ecriture 11s linear forwards;
 }
 
 h2 {
-  color: #556830;
+  color :yellow;
   font-size: 1em;
   font-family:'Montserrat', sans-serif;
-}
-
-a {
-  text-decoration: none;
-  opacity: 0.7;
-  color :#3D2B27;
-}
-
-a:hover {
-  opacity: 1;
-  transition: ease, 1s;
-}
-
-.container {
-  width: 700px;
-  margin: 40px auto;
-  padding: 20px;
-}
-
-@media (max-width: 960px) {
-    .container {
-    width: 700px;
-  }
-}
-
-@media (max-width: 720px) {
-    .container {
-    width: 500px;
-  }
-}
-
-@media (max-width: 540px) {
-    .container {
-    width: 300px;
-  }
 }
 
 .list-inline {
@@ -61,8 +36,6 @@ a:hover {
 }
 
 .list-inline:hover {
-  transform: scale(1.6);
-  transition: ease, 0.8s
 }
 
 .list-inline > li {
@@ -77,41 +50,41 @@ a:hover {
 }
 
 .img-circle:hover {
-  transform: scale(1.1);
-  transition: ease, 0.5s
 }
 
 .text-center {
   text-align: center;
 }
-.card-white {
-  margin: 20px;
-  background: white;
-  padding: 30px;
-  border: 1px lightgrey;
-  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
-  border-radius: 5px;
-  transition: ease, 0.5s;
-}
 
-.card-white:hover {
-  box-shadow: 0px 10px 30px rgba(80,0,0,0.3)
-}
-
-.btn-lien {
-  padding: 8px;
-  border-radius: 8px;
-  opacity: 0.8;
-  background-color:#3D2B27;
-  transition: ease, 1s;
+.text1 {
   color: white;
+  font-family:'Ubuntu', sans-serif;
+  font-size: 1em;
+  line-height: 1.1em;
+  opacity: 0;
+  animation: 3s ecriture 15s linear forwards;
+  margin: 10px;
+  padding: 10px;
 }
 
-.btn-lien:hover {
-  padding: 8px;
-  border-radius: 8px;
-  opacity: 1;
-  transform: scale(1.4);
-  transition: ease, 1s;
-  background-color:#3D2B27;
+.text2 {
+  color: white;
+  font-family:'Ubuntu', sans-serif;
+  font-size: 1em;
+  line-height: 1.1em;
+  opacity: 0;
+  animation: 3s ecriture 17s linear forwards;
+  margin: 10px;
+  padding: 10px;
+}
+
+.text3 {
+  color: white;
+  font-family:'Ubuntu', sans-serif;
+  font-size: 1em;
+  line-height: 1.1em;
+  opacity: 0;
+  animation: 3s ecriture 20s linear forwards;
+  margin: 10px;
+  padding: 10px;
 }
